--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./build/",
     "noImplicitAny": true,
-    "module": "ESNext",
+    "module": "es6",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
